--- a/templates/login.html
+++ b/templates/login.html
@@ -1,25 +1,21 @@
-<h1>Авторизация</h1>
-    <form action="" method="post">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.email.label }}<br>
-            {{ form.email(class="form-control", type="email") }}<br>
-            {% for error in form.email.errors %}
-                <div class="alert alert-danger" role="alert">
-                    {{ error }}
-                </div>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.password.label }}<br>
-            {{ form.password(class="form-control", type="password") }}<br>
-            {% for error in form.password.errors %}
-                <div class="alert alert-danger" role="alert">
-                    {{ error }}
-                </div>
-            {% endfor %}
-        </p>
-        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-        <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-        <div>{{ message }}</div>
-    </form>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Авторизация</title>
+      <link rel="stylesheet" href="static/css/login_style.css">
+</head>
+<body>
+  <h1>Вход</h1>
+<div id="wrapper">
+	<form id="signin" method="" action="" autocomplete="off">
+		<input type="text" id="user" name="user" placeholder="логин"/>
+		<input type="password" id="pass" name="pass" placeholder="пароль"/>
+		<button type="submit">&#xf0da;</button>
+		<p>forgot your password? <a href="#">click here</a></p>
+	</form>
+</div>
+  
+  
+</body>
+</html>
