--- a/templates/base.html
+++ b/templates/base.html
@@ -26,10 +26,10 @@
           <a class="nav-link active" aria-current="page" href="/">ГЛАВНАЯ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/recomended">РЕКОМЕНДАЦИИ</a>
+          <a class="nav-link" href="/recommended">РЕКОМЕНДАЦИИ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/buyit">КОРЗИНА</a>
+          <a class="nav-link" href="/cart">КОРЗИНА</a>
         </li>
       </ul>
       <div class="position-absolute start-50">
@@ -48,7 +48,7 @@
 	</header>
 
 <!-- Begin page content -->
-<main role="main" class="container-lg">
+<main role="main">
     {% block content %}{% endblock %}
 </main>
 
