--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,174 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ABOBA SHOP</title>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="stylesheet" href="static/css/style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+	<header>
+	<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+  <div class="container-xxl">
+    <a class="navbar-brand" href="/">
+      <img src="static/img/brand/logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top brand">
+      ABOBA SHOP
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">ГЛАВНАЯ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/recomended">РЕКОМЕНДАЦИИ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/buyit">КОРЗИНА</a>
+        </li>
+      </ul>
+      <div class="position-absolute start-50">
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search game" aria-label="Search">
+        <button class="btn btn-danger" type="submit">Search</button>
+      </form>
+  </div>
+    </div>
+  </div>
+  <div class="reg_but">
+  <a class="btn btn-primary" href="/register">Зарегистрироваться</a>
+	<a class="btn btn-primary" href="/login">Войти</a>
+</div>
+</nav>
+	</header>
+<section class="container-lg">
+	<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+    <div class="carousel-inner">
+   <div class="carousel-item active" data-bs-interval="4000">
+      <img src="{{ spin_games[0]['img_wide'] }}" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5 class="display-2 sekiro">{{ spin_games[0]['name'] }}</h5>
+        <p>{{ spin_games[0]['description'] }}</p>
+        <button type="button" class="btn btn-danger btn-lg">Купить</button>
+      </div>
+    </div>
+    <div class="carousel-item" data-bs-interval="4000">
+      <img src="{{ spin_games[1]['img_wide'] }}" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5 class="display-2 btl-2">{{ spin_games[1]['name'] }}</h5>
+        <p>{{ spin_games[1]['description'] }}</p>
+        <button type="button" class="btn btn-danger btn-lg">Купить</button>
+      </div>
+    </div>
+    <div class="carousel-item" data-bs-interval="4000">
+      <img src="{{ spin_games[2]['img_wide'] }}" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5 class="display-2 witcher">{{ spin_games[2]['name'] }}</h5>
+        <p>{{ spin_games[2]['description'] }}</p>
+        <button type="button" class="btn btn-danger btn-lg">Купить</button>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+	<!-- JavaScript Bundle with Popper -->
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+	 </section>
+	 <section>
+	 	<div class="container-lg">
+	 		<div class="swiper-menu">
+	 			<div class="swiper-wrapper">
+	 				<a href="" class="menu_elem mx-5"><span>Новинки</span></a>
+	 				<a href="" class="menu_elem mx-5"><span>Лидеры продаж</span></a>
+	 				<a href="" class="menu_elem mx-5"><span>Популярное</span></a>
+	 				<a href="" class="menu_elem mx-5"><span>Предзаказы</span></a>
+	 			</div>
+	 		</div>
+	 		
+	 	</div>
+	 </section>
+	 <section class="home-games">
+	 	<div class="container-lg">
+	 		<div class="games-wrapper">
+				{% for j in home_games %}
+	 			<div class="game-item">
+	 				<a class="game-item-img" href="/">
+	 					<img class="" src="{{ j['img'] }}">
+	 				</a>
+	 					<a href="/" class="game-item-name">{{ j['name'] }}</a>
+	 					<div class="price"><b>{{ j['price'] }}$</b></div>
+	 					<a href="" class="btn btn-primary">В корзину</a>
+	 			</div>
+				{% endfor %}
+	 		</div>
+	 	<div align="center">
+	 		<div class="btn btn-primary btn-all">Смотреть все</div>
+	 	</div>
+	 	
+	 	</div>
+	 </section>
+<!--
+	 </section>
+	 <section class="blog-section">
+	 	<div class="blog">
+	 		<h3 class="blog-title" align="center">Свежее в блоге</h3>
+	 	</div>
 
-{% block content %}
-<h2>игры</h2>
-{% for i in games %}
-    <div class="container">
-        {{ i.id }} {{ i.name }}
-        {{i.price}}
-    </div><br>
-{% endfor %}
-{% endblock %}
+	 	<div align="center">
+	 		<div class="btn btn-primary btn-all">Все публикации</div>
+	 	</div>
+	 </section>
+!-->
+	<footer class="container-fluid">
+	<br class="br">
+		<div class="container-lg">
+			<div class="row padding text-center">
+				<div class="col-12">
+						<h2 align="center">Наши контакты</h2>
+						<div class="col-12 social padding">
+							<ul>
+							<li>								
+									<a href="#">
+                                    <i class="fa fa-twitter"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa fa-instagram"></i>
+                                </a>
+                            </li>
+                           	<li>
+                           		<a href="#">
+                                    <i class="fa fa-vk"></i>
+                                </a>
+                           	</li>
+                           	<li>
+                           		<a href="#"><i class="fa fa-facebook"></i></a>
+                           	</li>
+                            	
+							</ul>
+
+						</div>    
+				</div>
+			</div>
+		</div>		
+	</footer>
+</body>
