--- a/templates/base.html
+++ b/templates/base.html
@@ -1,33 +1,91 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-          crossorigin="anonymous">
-    <title>{{title}}</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ABOBA SHOP</title>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="stylesheet" href="static/css/style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-<header>
-    <nav class="navbar navbar-light bg-light">
-        <div class="navbar-brand">Миссия Колонизации Марса</div>
-        <h6>Mars One</h6>
-        {% if current_user.is_authenticated %}
-        <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
-        {% else %}
-        <p>
-                <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
-                <a class="btn btn-success" href="/login">Войти</a>
-            </p>
-        {% endif %}
-    </nav>
-</header>
-<div style="margin: 10px">И на Марсе будут яблони цвести</div>
+	<header>
+	<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+  <div class="container-xxl">
+    <a class="navbar-brand" href="/">
+      <img src="static/img/brand/logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top brand">
+      ABOBA SHOP
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">ГЛАВНАЯ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/recommended">РЕКОМЕНДАЦИИ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/cart">КОРЗИНА</a>
+        </li>
+      </ul>
+      <div class="position-absolute start-50">
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search game" aria-label="Search">
+        <button class="btn btn-danger" type="submit">Search</button>
+      </form>
+  </div>
+    </div>
+  </div>
+  <div class="reg_but">
+  <a class="btn btn-primary" href="/register">Зарегистрироваться</a>
+	<a class="btn btn-primary" href="/login">Войти</a>
+  <a class="btn btn-primary" href="/logout">Выйти</a>
+</div>
+</nav>
+	</header>
+
 <!-- Begin page content -->
-<main role="main" class="container">
+<main role="main">
     {% block content %}{% endblock %}
 </main>
+
+<footer class="container-fluid">
+	<br class="br">
+		<div class="container-lg">
+			<div class="row padding text-center">
+				<div class="col-12">
+						<h2 align="center">Наши контакты</h2>
+						<div class="col-12 social padding">
+							<ul>
+							<li>
+									<a href="#">
+                                    <i class="fa fa-twitter"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa fa-instagram"></i>
+                                </a>
+                            </li>
+                           	<li>
+                           		<a href="#">
+                                    <i class="fa fa-vk"></i>
+                                </a>
+                           	</li>
+                           	<li>
+                           		<a href="#"><i class="fa fa-facebook"></i></a>
+                           	</li>
+
+							</ul>
+
+						</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
