--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,7 @@
   <div class="reg_but">
   <a class="btn btn-primary" href="/register">Зарегистрироваться</a>
 	<a class="btn btn-primary" href="/login">Войти</a>
+  <a class="btn btn-primary" href="/logout">Выйти</a>
 </div>
 </nav>
 	</header>
