--- a/templates/login.html
+++ b/templates/login.html
@@ -1,44 +1,57 @@
+{% extends 'base.html' %}
+{% block content %}
 <!doctype html>
 <html lang="en">
   <head>
-    <title>ABOBA SHOP</title>
+    <title>Авторизация</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="static/css/login.css">
 
     </head>
-    <body class="img js-fullheight" style="background-image: url(static/img/backg.png);">
+    <body>
     <section class="ftco-section">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-6 text-center mb-5">
-                    <h2 class="heading-section">ABOBA SHOP</h2>
+                    <h2 class="heading-section">Авторизация</h2>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-6 col-lg-4">
                     <div class="login-wrap p-0">
-                <h3 class="mb-4 text-center">Have an account?</h3>
-                <form action="#" class="signin-form">
+                <h3 class="mb-4 text-center">У вас есть аккаунт?</h3>
+                <form action="/login" class="signin-form" method="post">
+                  {{ form.hidden_tag() }}
                     <div class="form-group">
-                        <input type="text" class="form-control" name="email" placeholder="Email" required>
+                              {{ form.email(class="form-control", type="email", placeholder="Email") }}
+                              {% for error in form.email.errors %}
+                                      <p class="alert alert-danger" role="alert">
+                                          {{ error }}
+                                      </p>
+                                  {% endfor %}
                     </div>
                 <div class="form-group">
-                  <input id="password-field" type="password" name="password" class="form-control" placeholder="Password" required>
-                  <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
+                            {{ form.password(class="form-control", type="password", placeholder="Password") }}
+                            {% for error in form.password.errors %}
+                                <p class="alert alert-danger" role="alert">
+                                    {{ error }}
+                                </p>
+                            {% endfor %}
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="form-control btn btn-primary submit px-3">Sign In</button>
+                    <button type="submit" class="form-control btn btn-primary submit px-3">Войти</button>
+                    <button type="register" class="form-control btn btn-primary submit px-3" style="margin-top: 20px;"><a href="{{url_for('register')}}">Зарегестрироваться</a></button>
                 </div>
                 <div class="form-group d-md-flex">
                     <div class="w-50">
                         <label class="checkbox-wrap checkbox-primary">Remember Me
-                                      <input type="checkbox" checked>
+                                      {{ form.remember_me() }}
                                       <span class="checkmark"></span>
                                     </label>
                                 </div>
@@ -48,9 +61,11 @@
                 </div>
               </form>
               <p class="w-100 text-center">&mdash; Or Sign In With &mdash;</p>
-              <div class="social d-flex text-center">
-                <a href="#" class="px-2 py-2 mr-md-1 rounded"><span class="ion-logo-facebook mr-2"></span> Facebook</a>
-                <a href="#" class="px-2 py-2 ml-md-1 rounded"><span class="ion-logo-twitter mr-2"></span> Twitter</a>
+              <div class="text-center">
+                  <a href="#" class="icons"><i class="fa fa-facebook"></i></a>
+                                    <a href="#" class="icons">
+                                    <i class="fa fa-twitter"></i>
+                                </a>
               </div>
               </div>
                 </div>
@@ -65,4 +80,4 @@
 
     </body>
 </html>
-
+{% endblock %}
