--- a/templates/register.html
+++ b/templates/register.html
@@ -1,47 +1,98 @@
-{% extends "base.html" %}
-
+{% extends 'base.html' %}
 {% block content %}
-<h1>Регистрация</h1>
-<form action="" method="post">
-    {{ form.hidden_tag() }}
-    <p>
-        {{ form.nick.label }}<br>
-        {{ form.nick() }}<br>
-        {% for error in form.email.errors %}
-            <p class="alert alert-danger" role="alert">
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.email.label }}<br>
-        {{ form.email(class="form-control", type="email") }}<br>
-        {% for error in form.email.errors %}
-            <p class="alert alert-danger" role="alert">
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.password.label }}<br>
-        {{ form.password(class="form-control", type="password") }}<br>
-        {% for error in form.password.errors %}
-            <p class="alert alert-danger" role="alert">
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.password_again.label }}<br>
-        {{ form.password_again(class="form-control", type="password") }}<br>
-        {% for error in form.password_again.errors %}
-            <p class="alert alert-danger" role="alert">
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
-    <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-    <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-    {{message}}
-</form>
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>ABOBA SHOP</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="static/css/login.css">
+
+    </head>
+    <body>
+    <section class="ftco-section">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-6 text-center mb-5">
+                    <h2 class="heading-section">Регистрация</h2>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-6 col-lg-4">
+                    <div class="login-wrap p-0">
+                <h3 class="mb-4 text-center">Создать аккаунт?</h3>
+                <form action="/register" class="signin-form" method="post">
+                  {{ form.hidden_tag() }}
+                    <div class="form-group">
+                                {{ form.nick(class="form-control", type="text", placeholder="Username") }}
+                                {% for error in form.email.errors %}
+                                    <p class="alert alert-danger" role="alert">
+                                      {{ error }}
+                                      </p>
+                                    {% endfor %}
+                    </div>
+                    <div class="form-group">
+                                  {{ form.email(class="form-control", type="email", placeholder="Email") }}
+                                  {% for error in form.email.errors %}
+                                      <p class="alert alert-danger" role="alert">
+                                          {{ error }}
+                                      </p>
+                                  {% endfor %}
+                    </div>
+                <div class="form-group">
+                            {{ form.password(class="form-control", type="password", placeholder="Password") }}
+                            {% for error in form.password.errors %}
+                                <p class="alert alert-danger" role="alert">
+                                    {{ error }}
+                                </p>
+                            {% endfor %}
+                  
+                </div>
+                <div class="form-group">
+                              {{ form.password_again(class="form-control", type="password", placeholder="Repite password") }}
+                              {% for error in form.password_again.errors %}
+                                  <p class="alert alert-danger" role="alert">
+                                      {{ error }}
+                                  </p>
+                              {% endfor %}
+                  
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="form-control btn btn-primary submit px-3">Зарегистрироваться</button>
+                    <button type="submit" class="form-control btn btn-primary submit px-3" style="margin-top: 20px;"><a href="{{url_for('login')}}">Войти</a></button>
+                </div>
+                <div class="form-group d-md-flex">
+                    <div class="w-50">
+                        <label class="checkbox-wrap checkbox-primary">Remember Me
+                                      {{ form.remember_me() }}
+                                      <span class="checkmark"></span>
+                                    </label>
+                                </div>
+                </div>
+              </form>
+              <p class="w-100 text-center">&mdash; Зарегистрируйтесь с помощью соцсетей &mdash;</p>
+              <div class="text-center">
+                  <a href="#" class="icons"><i class="fa fa-facebook"></i></a>
+                                    <a href="#" class="icons">
+                                    <i class="fa fa-twitter"></i>
+                                </a>
+              </div>
+              </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="static/js/jquery.min.js"></script>
+  <script src="static/js/popper.js"></script>
+  <script src="static/js/bootstrap.min.js"></script>
+  <script src="static/js/main.js"></script>
+
+    </body>
+</html>
 {% endblock %}
