--- a/templates/index.html
+++ b/templates/index.html
@@ -1,52 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ABOBA SHOP</title>
-  <!-- CSS only -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-  <link rel="stylesheet" href="static/css/style.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<body>
-	<header>
-	<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
-  <div class="container-xxl">
-    <a class="navbar-brand" href="/">
-      <img src="static/img/brand/logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top brand">
-      ABOBA SHOP
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">ГЛАВНАЯ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/recomended">РЕКОМЕНДАЦИИ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/buyit">КОРЗИНА</a>
-        </li>
-      </ul>
-      <div class="position-absolute start-50">
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search game" aria-label="Search">
-        <button class="btn btn-danger" type="submit">Search</button>
-      </form>
-  </div>
-    </div>
-  </div>
-  <div class="reg_but">
-  <a class="btn btn-primary" href="/register">Зарегистрироваться</a>
-	<a class="btn btn-primary" href="/login">Войти</a>
-  <a class="btn btn-primary" href="/logout">Выйти</a>
-</div>
-</nav>
-	</header>
+{% extends "base.html" %}
+
+{% block content %}
 <section class="container-lg">
 	<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
@@ -56,7 +10,7 @@
   </div>
     <div class="carousel-inner">
    <div class="carousel-item active" data-bs-interval="4000">
-      <img src="{{ spin_games[0]['img_wide'] }}" class="d-block w-100" alt="...">
+       <a href="/{{spin_games[0]['id']}}"><img src="{{ spin_games[0]['img_wide'] }}" class="d-block w-100" alt="..."></a>
       <div class="carousel-caption d-none d-md-block">
         <h5 class="display-2 sekiro">{{ spin_games[0]['name'] }}</h5>
         <p>{{ spin_games[0]['description'] }}</p>
@@ -64,7 +18,7 @@
       </div>
     </div>
     <div class="carousel-item" data-bs-interval="4000">
-      <img src="{{ spin_games[1]['img_wide'] }}" class="d-block w-100" alt="...">
+        <a href=""><img src="{{ spin_games[1]['img_wide'] }}" class="d-block w-100" alt="..."></a>
       <div class="carousel-caption d-none d-md-block">
         <h5 class="display-2 btl-2">{{ spin_games[1]['name'] }}</h5>
         <p>{{ spin_games[1]['description'] }}</p>
@@ -97,10 +51,10 @@
 	 	<div class="container-lg">
 	 		<div class="swiper-menu">
 	 			<div class="swiper-wrapper">
-	 				<a href="" class="menu_elem mx-5"><span>Новинки</span></a>
-	 				<a href="" class="menu_elem mx-5"><span>Лидеры продаж</span></a>
-	 				<a href="" class="menu_elem mx-5"><span>Популярное</span></a>
-	 				<a href="" class="menu_elem mx-5"><span>Предзаказы</span></a>
+	 				<a href="/list" class="menu_elem mx-5"><span>Новинки</span></a>
+	 				<a href="/list" class="menu_elem mx-5"><span>Лидеры продаж</span></a>
+	 				<a href="/list" class="menu_elem mx-5"><span>Популярное</span></a>
+	 				<a href="/list" class="menu_elem mx-5"><span>Предзаказы</span></a>
 	 			</div>
 	 		</div>
 	 		
@@ -114,9 +68,9 @@
 	 				<a class="game-item-img" href="/">
 	 					<img class="" src="{{ j['img'] }}">
 	 				</a>
-	 					<a href="/" class="game-item-name">{{ j['name'] }}</a>
-	 					<div class="price"><b>{{ j['price'] }}$</b></div>
-	 					<a href="" class="btn btn-primary">В корзину</a>
+	 					<a href="/{{j['id']}}" class="game-item-name">{{ j['name'] }}</a>
+	 					<div class="price"><b>{{ j['price'] }} р.</b></div>
+	 					<a href="/cart_add/{{j['id']}}" class="btn btn-primary">В корзину</a>
 	 			</div>
 				{% endfor %}
 	 		</div>
@@ -138,38 +92,4 @@
 	 	</div>
 	 </section>
 !-->
-	<footer class="container-fluid">
-	<br class="br">
-		<div class="container-lg">
-			<div class="row padding text-center">
-				<div class="col-12">
-						<h2 align="center">Наши контакты</h2>
-						<div class="col-12 social padding">
-							<ul>
-							<li>								
-									<a href="#">
-                                    <i class="fa fa-twitter"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa fa-instagram"></i>
-                                </a>
-                            </li>
-                           	<li>
-                           		<a href="#">
-                                    <i class="fa fa-vk"></i>
-                                </a>
-                           	</li>
-                           	<li>
-                           		<a href="#"><i class="fa fa-facebook"></i></a>
-                           	</li>
-                            	
-							</ul>
-
-						</div>    
-				</div>
-			</div>
-		</div>		
-	</footer>
-</body>
+{% endblock %}
