--- a/templates/list.html
+++ b/templates/list.html
@@ -10,8 +10,8 @@
                     <img class="" src="{{ j['img'] }}">
                 </a>
                 <a href="/" class="game-item-name">{{ j['name'] }}</a>
-                <div class="price"><b>{{ j['price'] }}$</b></div>
-                <a href="" class="btn btn-primary">В корзину</a>
+                <div class="price"><b>{{ j['price'] }} р.</b></div>
+                <a href="/cart_add/j['id']" class="btn btn-primary">В корзину</a>
             </div>
             {% endfor %}
         </div>
