--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="carousel-item" data-bs-interval="4000">
-      <img src="{{ spin_games[2]['img_wide'] }}" class="d-block w-100" alt="...">
+        <a href="/{{spin_games[2]['id']}}"><img src="{{ spin_games[2]['img_wide'] }}" class="d-block w-100" alt="..."></a>
       <div class="carousel-caption d-none d-md-block">
         <h5 class="display-2 witcher">{{ spin_games[2]['name'] }}</h5>
         <p>{{ spin_games[2]['description'] }}</p>
