--- a/static/css/style.css
+++ b/static/css/style.css
@@ -146,9 +146,15 @@ h2 {
 	color: #B22222;
 } 
 
+
 footer {
-	background-color: #FFF8DC;
-    display: block;
+    background-color: #FFF8DC;
+}
+
+
+.footer {
+    flex-shrink: 0;
+
 }
 
 .reg_but {
