--- a/templates/cart.html
+++ b/templates/cart.html
@@ -10,7 +10,7 @@
                     <a class="game-item-img" href="/">
                         <img class="" src="{{ j['img'] }}">
                     </a>
-                    <a href="/" class="game-item-name">{{ j['name'] }}</a>
+                    <a href="/{{j['id']}}" class="game-item-name">{{ j['name'] }}</a>
                     <div class="price"><b>{{ j['price'] }}$</b></div>
                     <a href="/cart_delete/{{ j['id'] }}" class="btn btn-primary">Убрать</a>
                 </div>
