--- a/templates/list.html
+++ b/templates/list.html
@@ -9,7 +9,7 @@
                 <a class="game-item-img" href="/">
                     <img class="" src="{{ j['img'] }}">
                 </a>
-                <a href="/" class="game-item-name">{{ j['name'] }}</a>
+                <a href="/{{j['id']}}" class="game-item-name">{{ j['name'] }}</a>
                 <div class="price"><b>{{ j['price'] }}$</b></div>
                 <a href="" class="btn btn-primary">В корзину</a>
             </div>
