--- a/templates/payment.html
+++ b/templates/payment.html
@@ -11,42 +11,20 @@
                     <div class="col-md-5 d-md-block d-none p-0 box">
                         <div class="card rounded-0 border-0 card1" id="bill">
                             <h3 id="heading1">Платеж за все товары</h3>
+                            {% for game in cart_list %}
                             <div class="row">
                                 <div class="col-lg-7 col-8 mt-4 line pl-4">
-                                    <h2 class="bill-head">ДЕРЬМАК 3</h2> <small class="bill-date">2017 Feb 10 at 10:30 PM</small>
+                                    <h2 class="bill-head">{{game['name']}}</h2> <small class="bill-date">{{game['price']}} р.</small>
                                 </div>
                                 <div class="col-lg-5 col-4 mt-4">
-                                    <h2 class="bill-head px-xl-5 px-lg-4">CAF</h2>
+                                    <h2 class="bill-head px-xl-5 px-lg-4">RUB</h2>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-lg-7 col-8 mt-4 line pl-4">
-                                    <h2 class="bill-head">РЖУ ЖОПУ В СИКИРА</h2> <small class="bill-date">2017 Feb 25 at 11:30 PM</small>
-                                </div>
-                                <div class="col-lg-5 col-4 mt-4">
-                                    <h2 class="bill-head px-xl-5 px-lg-4">JFK</h2>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-7 col-8 mt-4 line pl-4">
-                                    <h2 class="bill-head">ТА ЭТА ЖЕ НОВЫЙ БАДЛФРОНТ КУПИ</h2> <small class="bill-date">2017 Mar 17 at 10:45 PM</small><br> <small class="bill-date">2017 Mar 18 at 11:45 PM</small>
-                                </div>
-                                <div class="col-lg-5 col-4 mt-4">
-                                    <h2 class="bill-head px-xl-5 px-lg-4">LHR</h2>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-7 col-8 mt-4 line pl-4">
-                                    <h2 class="bill-head">СЛЫШЬ КУПИ СКАЙРИМ</h2> <small class="bill-date">2017 Apr 13 at 05:30 PM</small>
-                                </div>
-                                <div class="col-lg-5 col-4 mt-4">
-                                    <h2 class="bill-head px-xl-5 px-lg-4">JFK</h2>
-                                </div>
-                            </div>
+                            {% endfor %}
                             <div class="row">
                                 <div class="col-md-12 red-bg">
                                     <p class="bill-date" id="total-label">Итоговая стоимость</p>
-                                    <h2 class="bill-head" id="total">$ 523.65</h2> <small class="bill-date" id="total-label">Price includes all taxes</small>
+                                    <h2 class="bill-head" id="total">{{total}} р.</h2> <small class="bill-date" id="total-label">Price includes all taxes</small>
                                 </div>
                             </div>
                         </div>
@@ -68,7 +46,9 @@
                                     <div class="col-md-12"> <input type="text" name="exp" id="exp" placeholder="MM/YY" minlength="5" maxlength="5"> </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-6"> <input type="submit" value="ПОТРАТЬ ШЕЙКЕЛИ ХОМЯЧЕК &nbsp; &#xf178;" class="btn btn-primary placeicon"> </div>
+                                    <div class="col-md-6">
+                                        <a href="/goods"><input type="submit" value="ПОТРАТЬ ШЕЙКЕЛИ, ХОМЯЧЕК &nbsp; &#xf178;" class="btn btn-primary placeicon"></a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
