--- a/templates/cart.html
+++ b/templates/cart.html
@@ -14,7 +14,7 @@
                         <img class="" src="{{ j['img'] }}">
                     </a>
                     <a href="/{{j['id']}}" class="game-item-name">{{ j['name'] }}</a>
-                    <div class="price"><b>{{ j['price'] }}$</b></div>
+                    <div class="price"><b>{{ j['price'] }} р.</b></div>
                     <a href="/cart_delete/{{ j['id'] }}" class="btn btn-primary">Убрать</a>
                 </div>
                 {% endfor %}
