--- a/templates/list.html
+++ b/templates/list.html
@@ -10,7 +10,7 @@
                     <img class="" src="{{ j['img'] }}">
                 </a>
                 <a href="/{{j['id']}}" class="game-item-name">{{ j['name'] }}</a>
-                <div class="price"><b>{{ j['price'] }}$</b></div>
+                <div class="price"><b>{{ j['price'] }} р.</b></div>
                 {% if j['id'] in cart %}
                     <a href="/cart_add/{{j['id']}}" class="btn btn-primary">В корзину</a>
                 {% else %}
