--- a/templates/list.html
+++ b/templates/list.html
@@ -6,16 +6,12 @@
         <div class="games-wrapper">
             {% for j in games_list %}
             <div class="game-item">
-                <a class="game-item-img" href="/">
+                <a class="game-item-img" href="/{{j['id']}}">
                     <img class="" src="{{ j['img'] }}">
                 </a>
                 <a href="/{{j['id']}}" class="game-item-name">{{ j['name'] }}</a>
                 <div class="price"><b>{{ j['price'] }} р.</b></div>
-                {% if j['id'] in cart %}
-                    <a href="/cart_add/{{j['id']}}" class="btn btn-primary">В корзину</a>
-                {% else %}
-                    <a href="/cart" class="btn btn-primary">Добавлено</a>
-                {% endif %}
+                <a href="/cart_add/{{j['id']}}" class="btn btn-primary">В корзину</a>
             </div>
             {% endfor %}
         </div>
