--- a/templates/list.html
+++ b/templates/list.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% if games_list %}
 <section class="home-games">
     <div class="container-lg">
         <div class="games-wrapper">
@@ -17,4 +18,11 @@
         </div>
     </div>
 </section>
+{% else %}
+<center>
+    <div style="margin: 17.5%;">
+        <a href="/list" class="btn btn-primary">Ничего не найдено</a>
+    </div>
+</center>
+{% endif %}
 {% endblock %}
