--- a/templates/product.html
+++ b/templates/product.html
@@ -44,6 +44,7 @@
 </dl> 
  <!-- item-property-hor .// -->
   <a href="/cart_add/{{game['id']}}" class="btn btn-primary text-uppercase">Добавить в корзину</a>
+  <a href="/add_comment" class="btn btn-primary text-uppercase">Добавить комментарий</a>
 </article> <!-- card-body.// -->
     </aside> <!-- col.// -->
   </div> <!-- row.// -->
