--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
         <div class="container-xxl">
             <a class="navbar-brand" href="/">
-                <img src="static/img/brand/logo.svg" alt="" width="30" height="24"
+                <img src="{{ url_for('static', filename='/img/brand/logo.svg')}}" alt="" width="30" height="24"
                      class="d-inline-block align-text-top brand">
                 ABOBA SHOP
             </a>
@@ -37,9 +37,9 @@
                 </ul>
                 <div class="position-absolute start-50">
                     <form action="" class="d-flex" method="post">
-                        {% if form %}
-                            {{form.search(class="form-control me-2", type="search", placeholder="Search game")}}
-                            {{form.submit(class="btn btn-danger", type="submit")}}
+                        {% if form_s %}
+                            {{form_s.search(class="form-control me-2", type="search", placeholder="Search game")}}
+                            {{form_s.submit(class="btn btn-danger", type="submit")}}
                         {% endif %}
                     </form>
                 </div>
