--- a/templates/product.html
+++ b/templates/product.html
@@ -9,44 +9,63 @@
 
 <!------ Include the above in your HEAD tag ---------->
 <div class="card container-lg">
-  <div class="row">
-    <aside class="col-sm-5">
-<article class="gallery-wrap"> 
-<div class="img-big-wrap">
-  <div> <a href="#"><img src="{{ game['img'] }}"></a></div>
-</div> <!-- slider-product.// -->
-</article> <!-- gallery-wrap .end// -->
-    </aside>
-    <aside class="col-sm-7">
-<article class="card-body p-5">
-  <h3 class="title mb-3">{{ game['name'] }}</h3>
+    <div class="row">
+        <aside class="col-sm-5">
+            <article class="gallery-wrap">
+                <div class="img-big-wrap">
+                    <div><a href="#"><img src="{{ game['img'] }}"></a></div>
+                </div> <!-- slider-product.// -->
+            </article> <!-- gallery-wrap .end// -->
+        </aside>
+        <aside class="col-sm-7">
+            <article class="card-body p-5">
+                <h3 class="title mb-3">{{ game['name'] }}</h3>
 
-<p class="price-detail-wrap"> 
+                <p class="price-detail-wrap">
   <span class="price h3 text-warning"> 
     <span class="currency">RU </span><span class="num">{{ game['price'] }}₽</span>
-  </span> 
-</p> <!-- price-detail-wrap .// -->
-<dl class="item-property">
-  <dt>Description</dt>
-  <dd><p>{{ game['description'] }}</p></dd>
-</dl>
-<dl class="param param-feature">
-  <dt>Жанр</dt>
-  <dd>{{ game['genre'] }}</dd>
-</dl>  <!-- item-property-hor .// -->
-<dl class="param param-feature">
-  <dt>Разработчик</dt>
-  <dd>{{ game['developers'] }}</dd>
-</dl>  <!-- item-property-hor .// -->
-<dl class="param param-feature">
-  <dt>Дата выпуска</dt>
-  <dd>{{ game['release_date'] }}</dd>
-</dl> 
- <!-- item-property-hor .// -->
-  <a href="/cart_add/{{game['id']}}" class="btn btn-primary text-uppercase">Добавить в корзину</a>
-</article> <!-- card-body.// -->
-    </aside> <!-- col.// -->
-  </div> <!-- row.// -->
+  </span>
+                </p> <!-- price-detail-wrap .// -->
+                <dl class="item-property">
+                    <dt>Description</dt>
+                    <dd><p>{{ game['description'] }}</p></dd>
+                </dl>
+                <dl class="param param-feature">
+                    <dt>Жанр</dt>
+                    <dd>{{ game['genre'] }}</dd>
+                </dl>  <!-- item-property-hor .// -->
+                <dl class="param param-feature">
+                    <dt>Разработчик</dt>
+                    <dd>{{ game['developers'] }}</dd>
+                </dl>  <!-- item-property-hor .// -->
+                <dl class="param param-feature">
+                    <dt>Дата выпуска</dt>
+                    <dd>{{ game['release_date'] }}</dd>
+                </dl>
+                <!-- item-property-hor .// -->
+                <a href="/cart_add/{{game['id']}}" class="btn btn-primary text-uppercase">Добавить в корзину</a>
+            </article> <!-- card-body.// -->
+        </aside> <!-- col.// -->
+    </div> <!-- row.// -->
+    <br>
+    <center>
+        <a class="btn btn-primary" href="/add_comment/{{game['id']}}">Оставить комментарий</a>
+    </center>
+    <br>
+    <div class="container-fluid">
+        {% for comm in comments %}
+            <div class="col-md6 border rounded" style="background-color: #fff; color: #000;">
+                <h2>{{comm.body}}</h2>
+                <div>
+                    {{comm.username}}
+                </div>
+                <div>
+                    {{comm.timestamp.strftime('%d %b %Y; %H:%M:%S')}}
+                </div>
+            </div>
+            <br>
+        {% endfor %}
+    </div>
 </div> <!-- card.// -->
 <!--container.//-->
 {% endblock %}
