--- a/static/css/comments.css
+++ b/static/css/comments.css
@@ -96,8 +96,8 @@ body {
     color: rgb(184, 183, 183)
 }
 
-h1,
-h4 {
+.darker h1,
+.darker h4 {
     color: white;
     font-weight: bold
 }
@@ -130,7 +130,7 @@ label {
     border-radius: 12px
 }
 
-form {
+.comments-body ыform {
     border: 1px solid rgba(16, 46, 46, 1);
     background-color: rgba(16, 46, 46, 0.973);
     border-radius: 5px;
@@ -194,4 +194,13 @@ form {
 
 .addcom {
     margin-top: 20px; 
+}
+
+
+.comments-body {
+    background-color: #0d0d0d 
+}
+
+.username-com h4 {
+    color: crimson;
 }
