--- a/templates/cart.html
+++ b/templates/cart.html
@@ -12,10 +12,10 @@
                 {% for j in cart_list %}
                 <div class="game-item">
                     <a class="game-item-img" href="/">
-                        <img class="" src="{{ j['img'] }}">
+                        <img class="postimg" src="{{ j['img'] }}">
                     </a>
                     <a href="/{{j['id']}}" class="game-item-name">{{ j['name'] }}</a>
-                    <div class="price"><b>{{ j['price'] }}$</b></div>
+                    <div class="price"><b>{{ j['price'] }}₽</b></div>
                     <a href="/cart_delete/{{ j['id'] }}" class="btn btn-primary">Убрать</a>
                 </div>
                 {% endfor %}
