--- a/templates/product.html
+++ b/templates/product.html
@@ -28,7 +28,7 @@
   </span>
                 </p> <!-- price-detail-wrap .// -->
                 <dl class="item-property">
-                    <dt>Description</dt>
+                    <dt>Описание</dt>
                     <dd><p>{{ game['description'] }}</p></dd>
                 </dl>
                 <dl class="param param-feature">
@@ -45,6 +45,11 @@
                 </dl>
                 <!-- item-property-hor .// -->
                 <a href="/cart_add/{{game['id']}}" class="btn btn-primary text-uppercase">Добавить в корзину</a>
+                {% if current_user.admin and game['is_selling'] %}
+                    <a href="/delete_game/{{game['id']}}" class="btn btn-danger">Удалить игру</a>
+                {% elif current_user.admin and not game['is_selling'] %}
+                    <a href="/add_game/{{game['id']}}" class="btn btn-primary">Добавить игру</a>
+                {% endif %}
             </article> <!-- card-body.// -->
         </aside> <!-- col.// -->
     </div> <!-- row.// -->
@@ -53,22 +58,23 @@
         <a class="btn btn-primary" href="/add_comment/{{game['id']}}">Оставить комментарий</a>
     </center>
     <br>
-    <div class="container comments-body">
-            <div class="row">
+    <div class="container-lg comments-body">
+        <div class="row">
            <div class="col-sm-5 col-md-6 col-12 pb-4">
         {% for comm in comments %}
         <div class="comment mt-4 text-justify float-left">
-            <p>{{comm.body }}</p>
+            <img src="{{ comm.avatarcom }}" class="rounded-circle">
             <h4 class="username-com">
                 {{ comm.username }}
             </h4>
             <span>
                 {{ comm.timestamp.strftime('%d %b %Y; %H:%M:%S') }}
             </span>
+            <p>{{comm.body }}</p>
         </div>
         <br>
         {% endfor %}
-    </div> 
+    </div>
     </div>
     </div>
 
