--- a/static/css/comments.css
+++ b/static/css/comments.css
@@ -86,6 +86,7 @@ body {
 .comment span,
 .darker h4,
 .darker span {
+    color: #fff;
     display: inline
 }
 
@@ -130,7 +131,7 @@ label {
     border-radius: 12px
 }
 
-.comments-body ыform {
+.comments-body form {
     border: 1px solid rgba(16, 46, 46, 1);
     background-color: rgba(16, 46, 46, 0.973);
     border-radius: 5px;
@@ -203,4 +204,24 @@ label {
 
 .username-com h4 {
     color: crimson;
+}
+
+.h1-comment {
+    color: #fff;
+}
+
+.submit-btn-comment {
+    margin: 30px;
+}
+
+.aboba {
+    align-content: center;
+}
+
+.label {
+    color: white;
+}
+
+textarea {
+    color: white;
 }
