made final preparations

--- a/templates/login.html
+++ b/templates/login.html
@@ -22,6 +22,11 @@
                     <h2 class="heading-section">Авторизация</h2>
                 </div>
             </div>
+            <center>
+                <div class="container-some" style="color: #fff;">
+                    <h3>Чтобы добавить аватар, пройдите <a href="https://ru.gravatar.com/">СЮДА</a></h3>
+                </div>
+            </center>
             <div class="row justify-content-center">
                 <div class="col-md-6 col-lg-4">
                     <div class="login-wrap p-0">
