--- a/templates/goods.html
+++ b/templates/goods.html
@@ -8,7 +8,7 @@
                 {% for game in games %}
                 <div class="game-item">
                     <div class="game-item-img">
-                        <img class="" src="{{ game['img'] }}">
+                        <img class="postimg" src="{{ game['img'] }}">
                     </div>
                     <div class="game-item-name">{{ game['name'] }}</div>
                     <div class="price"><b>{{ game['code'] }}</b></div>
